[metadata]
name = date
version = 0.1.0
author = Yiqun Chen
description = DATE: Dual Assignment for End-to-End Fully Convolutional Object Detection.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
license = BSD 3-Clause License
classifiers =
    Framework :: PyTorch
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # protobuf <= 3.20
    attrmap
    cython
    numpy
    tqdm
    opencv-python
    scipy
    scikit-image
    scikit-learn
    pyyaml
    torch-tb-profiler
    pycocotools
    pytest
    mmcv-full
    mmdet>=2.25
    tidecv

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    test*
    ckpts*
    logs*
